[BlackBerry] Crash in InRegionScrollerPrivate. https://bugs.webkit.org/show_bug.cgi?id=101399

Patch by Genevieve Mak <gmak@rim.com> on 2012-11-06
Reviewed by Rob Buis.

Add a pointer to the enclosing document as the pointer to layer
or node along the way may become invalid.
Use document pointer in clearDocumentData.
PR #238469

* Api/InRegionScroller.cpp:
(BlackBerry::WebKit::InRegionScrollerPrivate::clearDocumentData):
* WebKitSupport/InRegionScrollableArea.cpp:
(BlackBerry::WebKit::InRegionScrollableArea::InRegionScrollableArea):
(BlackBerry::WebKit::InRegionScrollableArea::document):
(WebKit):
* WebKitSupport/InRegionScrollableArea.h:
(WebCore):
(InRegionScrollableArea):

Canonical link: https://commits.webkit.org/119489@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133679 268f45cc-cd09-0410-ab3c-d52691b4dbfc